# comicRD

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PLAN.md  README.md  flutter_rust_bridge.yaml  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: aur.yml  desktop-build.yml
android/app/: build.gradle.kts
app_flutter/: pubspec.yaml
app_flutter/lib/: api.dart  app.dart  bridge_generated.dart  frb_generated.dart  frb_generated.io.dart  main.dart
app_flutter/linux/: CMakeLists.txt
app_flutter/test/: back_to_top_button_test.dart  comic_bookmark_test.dart  comic_page_test.dart  reader_page_test.dart  (+3 more)
crates/comicrd_core/: Cargo.toml  build.rs
crates/comicrd_core/src/: chapter.rs  database.rs  image_pipeline.rs  lib.rs  library.rs  reader.rs  thumbnail.rs
crates/comicrd_core/tests/: backup.rs  bookmarks.rs  bookmarks_history.rs  cache.rs  chapters.rs  history.rs  image_pipeline.rs  library.rs  library_listing.rs  library_source.rs  migrations.rs  reader_flow.rs  scan.rs
e2e/: grid-system.spec.ts  reader-image-loading.spec.ts  scroll-restoration.spec.ts
scripts/: build-linux.sh  build-native-bridge.ps1  build-native-bridge.sh  package-arch-local.sh  package-linux.sh  setup-dav1d.ps1
src/: i18n.ts  index.css  main.tsx  router.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
tests/: aur-workflow.test.ts  comic-page.test.ts  comic-protocol.test.ts  font-assets.test.ts  i18n-ui.test.ts  i18n.test.ts  reader-image-policy.test.ts  reader-progress.test.ts  reader-scrollbar.test.ts  settings-state.test.ts
web/: manifest.json
(+80 files in other folders)
