[package]
name = "comicrd"
version = "0.6.1"
description = "A simple comic reader."
authors = ["andrizan"]
license = "MIT"
repository = "https://github.com/andrizan/comicRD.git"
edition = "2021"
rust-version = "1.95"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.39.0", features = ["bundled"] }
walkdir = "2.5.0"
zip = { version = "2.2.3", default-features = false, features = ["deflate"] }
ahash = "0.8"
lru = "0.16"

[dev-dependencies]
tempfile = "3.23.0"
image = { version = "0.25.8", default-features = false, features = ["png"] }
