[package]
name = "comicrd_core"
version = "1.1.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.5.0"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
unrar = "0.5.8"
image = { version = "0.25.8", default-features = false, features = [
  "avif",
  "avif-native",
  "png",
  "jpeg",
  "webp",
  "gif",
  "bmp",
] }

[dev-dependencies]
tempfile = "3.23.0"
